[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/Images/question_icon.png" type="Texture" id=1]
[ext_resource path="res://games/SSCMiniGame/Assets/Scripts/TutorialButtonSSC.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 31.5939

[node name="TutorialButton" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
